Updating Learning Community" to "Discussion Forum in Moodle"

--- a/course_assessment.qmd
+++ b/course_assessment.qmd
@@ -202,7 +202,7 @@ After completing this unit, including the learning activities, you will write in
 
 Be sure to cite Palmer (2017) and other authors in your journal to demonstrate ways in which your thinking aligns with, contrasts with, or builds on the writing of the authors.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -214,7 +214,7 @@ Be sure to cite Palmer (2017) and other authors in your journal to demonstrate w
 
 For this activity, you are asked to share a little more about yourself with your learning community. First, find a quote about either identity or integrity. For example, you may want to perform a Google image search for "identity quote." Find one that resonates with you and then include a picture of something that tells us something about you. Post the quote and your image to the learning community or your preferred social network service with a 1-2 sentence explanation.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -226,7 +226,7 @@ For this activity, you are asked to share a little more about yourself with your
 
 Based on the learning activities in this unit, create a learning activity you would use in a course that incorporates elements of belonging, discussed in the course readings and your blog posts. Include the learning outcome for the activity, the learning activity, and a discussion of how the different elements of the learning activity would serve to support a sense of belonging for students.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -241,7 +241,7 @@ After completing this unit, including the learning activities, you will write a 
 -   Provide a brief description of each of the three models (with citations as appropriate).
 -   Select the learning community model that most closely aligns with your identity and values as a teacher/facilitator. Describe the strengths you see in this model, explaining why it resonates with your concepts of teaching and learning.
 
-*Note: This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.*
+*Note: This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.*
 
 :::
 
@@ -272,7 +272,7 @@ Then, contact your friend or colleague and schedule a time to meet, preferably f
 
 After you have completed the interview, prepare a 250-word reflection on what you have learned from the interview, identifying at least three strategies you can use to engage students in collaborative learning as well as strategies you can use to support connections between students in online learning environments. Be sure to reference the other learner for her/his original ideas.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -290,7 +290,7 @@ Watch ["Servant Leadership: How a jar can change the way you lead and serve"](ht
 -   Reference the Silberman and Brookfield texts and find one strategy to apply to each of the seven concepts. List each concept of intentional practice and your chosen strategy beside it, include a brief description of the strategy.
 -   In a general manner, explain how to use the strategies with intentionality to be a servant leader in the adult learning environment.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -312,7 +312,7 @@ Based on the reading, reflect on the following questions:
 
 Create a concept map to show your networks of relationships using tools such as [bubbl.us](https://bubbl.us/){target="_blank"} or [popplet.com](http://popplet.com/){target="_blank"}, or on paper, take a picture and include it in your post. Reflect on how this relates to your teaching/facilitating work.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
@@ -344,6 +344,6 @@ As you engage in this reflective experience, hold in mind these questions:
 
 **Engage with others:** Read the reflections of your peers. Notice what resonates with you or expands your perspective. Respond to at least two (2) peers, practicing humility by naming what you learned from their insights or how their experience challenged or enriched your own.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
