--- a/u1.qmd
+++ b/u1.qmd
@@ -216,7 +216,7 @@ After completing this unit, including the learning activities, you are asked to 
 
 Be sure to cite Palmer [-@palmerCourageTeachExploring2017] and other authors in your journal to demonstrate ways in which your thinking aligns with, contrasts with, or builds on the writing of the authors.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
