--- a/u2.qmd
+++ b/u2.qmd
@@ -118,9 +118,9 @@ What Angelou [-@angelouConversationMayaAngelou1973] so powerfully portrays is th
 
 ::: {.learning-activity time="45"}
 
-For this activity, you are asked to share a little more about yourself with your learning community. First, find a quote about either identity or integrity. For example, you may want to perform a Google image search for "identity quote." Find one that resonates with you and then include a picture of something that tells us something about you. Post the quote and your image to the Learning Community or your preferred social network service with a 1-2 sentence explanation.
+For this activity, you are asked to share a little more about yourself with your learning community. First, find a quote about either identity or integrity. For example, you may want to perform a Google image search for "identity quote." Find one that resonates with you and then include a picture of something that tells us something about you. Post the quote and your image to the Discussion Forum in Moodle or your preferred social network service with a 1-2 sentence explanation.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
