--- a/u3.qmd
+++ b/u3.qmd
@@ -167,7 +167,7 @@ In your reflective journal, compose an email or talking points for a conversatio
 
 Based on the learning activities in this unit, create a learning activity you would use in a course that incorporates elements of belonging, discussed in the course readings and your Reflective Journal. Include the learning outcome for the activity, the learning activity, and a discussion of how the different elements of the learning activity would serve to support a sense of belonging for students.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
