--- a/u4.qmd
+++ b/u4.qmd
@@ -251,7 +251,7 @@ After completing this unit, including the learning activities, you are asked to 
 -   Provide a brief description of each of the three models (with citations as appropriate).
 -   Select the learning community model that most closely aligns with your identity and values as a teacher/facilitator. Describe the strengths you see in this model, explaining why it resonates with your concepts of teaching and learning.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 :::
 
 ## Summary {.unnumbered}
