--- a/u5.qmd
+++ b/u5.qmd
@@ -150,7 +150,7 @@ Then, contact your friend or colleague and schedule a time to meet, preferably f
 
 After you have completed the interview, prepare a 250-word reflection on what you have learned from the interview, identifying at least three strategies you can use to engage students in collaborative learning as well as strategies you can use to support connections between students in online learning environments. Be sure to reference the other learner for her/his original ideas.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
