--- a/u7.qmd
+++ b/u7.qmd
@@ -129,7 +129,7 @@ Watch ["Servant Leadership: How a Jar Can Change the Way You Lead and Serve"](ht
 - Reference the Brookfield and Preskill [-@brookfieldDiscussionBook502016] and Silberman and Biech [-@silbermanActiveTrainingHandbook2015] and find one (1) strategy to apply to each of the seven (7) concepts. List each concept of intentional practice and your chosen strategy beside it, include a brief description of the strategy.
 - In a general manner, explain how to use the strategies with intentionality to be a servant leader in the adult learning environment.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
