--- a/u8.qmd
+++ b/u8.qmd
@@ -236,7 +236,7 @@ Based on the reading, reflect on the following questions:
 
 Create a concept map to show your networks of relationships using tools such as [bubbl.us](https://bubbl.us/){target="_blank"} or [popplet.com](http://popplet.com/){target="_blank"}, or on paper, take a picture and include it in your post. Reflect on how this relates to your teaching and facilitating work.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
