--- a/u9.qmd
+++ b/u9.qmd
@@ -37,7 +37,7 @@ Here is a list of learning activities that will benefit you in completing this u
 - Watch "Intrigue: How to Create Interest and Connect with Anyone" by Sam Horn and create your own intriguing pitch following his suggested process.
 - Read "Cognitive and Interpersonal Features of Intellectual Humility" [@learyCognitiveInterpersonalFeatures2017] and respond to the question in your Reflective Journal.
 - Watch Farah Nasser’s presentation, "The Power of Intellectual Humility," and reflect on how you might make assumptions about those you interact with.
-- Follow the prompts for personal reflection on this unit’s learning and share your insights in the Learning Community.
+- Follow the prompts for personal reflection on this unit’s learning and share your insights in the Discussion Forum in Moodle.
 
 *Note:* Working through learning activities will help you to meet the learning outcomes and successfully complete your assessments.
 :::
@@ -250,7 +250,7 @@ As you engage in this reflective experience, hold in mind these questions:
 
 **Engage with Others:** Read the reflections of your peers. Notice what resonates with you or expands your perspective. Respond to at least two peers, practicing humility by naming what you learned from their insights or how their experience challenged or enriched your own.
 
-*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Learning Community to deepen your understanding.
+*Note:* This activity serves as the discussion prompt for this unit. Share your response and connect with others in the Discussion Forum in Moodle to deepen your understanding.
 
 :::
 
