--- a/u2.qmd
+++ b/u2.qmd
@@ -6,7 +6,7 @@ As we began to explore in Unit 1, creating authentic learning communities begins
 
 In this unit, we will explore the importance of identity and integrity as engage in teaching, coaching or facilitation. We will consider our own sense of identity in these roles, and what it means to belong to oneself.
 
-**Unit 2 focuses on two guiding questions:**
+Unit 2 focuses on two guiding questions:
 
 - What is my identity as a teacher, leader, or facilitator?
 - What does it mean for me to be authentic as a teacher, coach or facilitator?
